feat: 실행가능하게 변경
